--- a/Proyecto Tutorial/Tema 1.html
+++ b/Proyecto Tutorial/Tema 1.html
@@ -11,7 +11,7 @@
 <header>
 	<nav>
 		<font color="#8F1410">
-		<a href="Inicio.html">Inicio</a>
+		<a href="Inicio.index">Inicio</a>
 		<a href="Indice.html">Indice</a>
 	</nav>
 	</font>
