--- a/Proyecto Tutorial/Tema 4.html
+++ b/Proyecto Tutorial/Tema 4.html
@@ -10,7 +10,7 @@
 <header>
 	<nav>
 		<font color="#8F1410">
-		<a href="Inicio.html">Inicio</a>
+		<a href="Inicio.index">Inicio</a>
 		<a href="Indice.html">Indice</a>
 	</nav>
 	</font>
@@ -19,7 +19,6 @@
 <font color="blue">
 <h1><tt><p><b>Videos y Audios.</b></p></h1>
 </font>
-<p><h3><tt></tt></h3></p>
 <p><h3><tt>Para poder poner un audio o un video en html usaremos: < embed src="..." >< /embed >, en donde esta (scr="..."), dentro de las comillas pondremos el nombre de nuestro audio que tendra que estar guardado en mp3 o mp4.</tt></h3></p>
 <font color="purple">
 <p><h2><tt>EJEMPLO: < embed src="El Pollito Pio.mp3" >< /embed ></tt></h2></p></font>
